# Harbor-Download-Organizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  coverage.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  gh-pages.yml  release.yml  stale.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: architecture.md  codebase_overview.md  dependencies.md  development_tasks.md  license.md
.planning/phases/01-macos-app-foundation/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/fuzz_targets/: config_yaml.rs  rule_yaml.rs
crates/core/src/: config.rs  downloads.rs  health.rs  lib.rs  orchestrator.rs  state.rs  types.rs
crates/core/src/platform/: macos.rs  mod.rs  windows.rs
crates/core/tests/: config_tests.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/assets/: Install Harbor.command
crates/tauri-app/capabilities/: main.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: integration_tests.rs  main.rs  state.rs
crates/tauri-app/src/commands/: activity.rs  error_contract.rs  error_contract_tests.rs  mod.rs  rules.rs  settings.rs  ui_helpers.rs
crates/tray/: Cargo.toml  check_error.txt
crates/tray/src/: logic.rs  main.rs
crates/tray/wix/: main.wxs
docs/: ARCHITECTURE.md  DPI_SCALING.md  POE_TASKS.md  TODO.md  WINDOW_MANAGEMENT.md  WINDOW_SIZE_EXAMPLES.md  _config.yml  index.html  index.md
docs/testing/: coverage-policy.md
examples/: harbor.config.yaml
tools/: README.md  cleanup.ps1  cleanup_startup.py  coverage.py  coverage_ui.py  generate_dmg_background.swift  setup-dev.ps1  size.py  update-local-install.ps1  version.ps1  version.py
tools/installer/: harbor.sed  setup.cmd
