[workspace]
members = ["crates/core", "crates/cli", "crates/tray", "crates/tauri-app"]
resolver = "2"

[workspace.package]
version = "1.0.3"
edition = "2021"
authors = ["Eduard Olteanu"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = "0.4"
