[project]
name = "harbor"
version = "2.0.0"
description = "Harbor specific tasks"

# ============================================================================
# BUILD & RELEASE TASKS
# ============================================================================

[tool.poe.tasks.build]
help = "Build release binaries and installer (via Tauri)"
cmd = "npm run tauri:build --prefix packages/ui"

[tool.poe.tasks.build-debug]
help = "Build debug binaries"
cmd = "npm run tauri:build --prefix packages/ui -- --debug"

[tool.poe.tasks.unquarantine]
help = "Remove macOS quarantine attribute from built .app bundle"
cmd = "xattr -d com.apple.quarantine crates/tauri-app/target/release/bundle/macos/Harbor.app || true"

[tool.poe.tasks.clean]
help = "Remove build artifacts"
cmd = "cargo clean"

[tool.poe.tasks.clean-startup]
help = "Remove ghost startup entries (e.g. from debug builds)"
cmd = "uv run python tools/cleanup_startup.py"

# ============================================================================
# DEVELOPMENT TASKS
# ============================================================================

[tool.poe.tasks.dev]
help = "Start development server (Hot Reload)"
cmd = "npm run tauri:dev --prefix packages/ui"

[tool.poe.tasks.test]
help = "Run unit tests"
cmd = "cargo test"

[tool.poe.tasks.test-ui]
help = "Run frontend unit tests"
cmd = "npm run test --prefix packages/ui -- --run"

[tool.poe.tasks.test-all]
help = "Run both backend and frontend tests"
sequence = ["test", "test-ui"]

[tool.poe.tasks.coverage]
help = "Run backend coverage report with non-blocking 70% warning"
cmd = "uv run python tools/coverage.py"

[tool.poe.tasks.coverage-ui]
help = "Run frontend coverage and open report"
cmd = "uv run python tools/coverage_ui.py"

[tool.poe.tasks.install-coverage-tools]
help = "Install cargo-llvm-cov"
cmd = "cargo install cargo-llvm-cov"

# ============================================================================
# LEGACY / ALIAS TASKS
# ============================================================================

[tool.poe.tasks.msi]
help = "Alias for build"
sequence = ["build"]

[tool.poe.tasks.release]
help = "Alias for build"
sequence = ["build"]

# ============================================================================
# VERSION MANAGEMENT TASKS
# ============================================================================

[tool.poe.tasks.version]
help = "Show current version"
cmd = "uv run python tools/version.py show"

[tool.poe.tasks.bump-patch]
help = "Bump patch version (2.0.0 -> 2.0.1)"
cmd = "uv run python tools/version.py bump patch"

[tool.poe.tasks.bump-minor]
help = "Bump minor version (2.0.0 -> 2.1.0)"
cmd = "uv run python tools/version.py bump minor"

[tool.poe.tasks.bump-major]
help = "Bump major version (2.0.0 -> 3.0.0)"
cmd = "uv run python tools/version.py bump major"

[tool.poe.tasks.git-release]
help = "Create git tag and push for current version"
cmd = "uv run python tools/version.py git-release"

# ============================================================================
# DEPENDENCY MANAGEMENT
# ============================================================================

[tool.poe.tasks.deps-update]
help = "Update dependencies"
cmd = "cargo update"

[tool.poe.tasks.deps-outdated]
help = "Check for outdated dependencies (requires cargo-outdated)"
cmd = "cargo outdated"

[tool.poe.tasks.deps-tree]
help = "Show dependency tree"
cmd = "cargo tree"

# ============================================================================
# UTILITY TASKS
# ============================================================================

[tool.poe.tasks.install-dev-tools]
help = "Install development tools (cargo-watch, cargo-outdated, npm deps, etc.)"
shell = """
cargo install cargo-watch
cargo install cargo-outdated
npm install --prefix packages/ui
echo "Development tools and dependencies installed successfully!"
"""

[tool.poe.tasks.size]
help = "Show binary sizes"
cmd = "uv run python tools/size.py"

[tool.poe.tasks.list]
help = "List all available tasks"
cmd = "poe"

[tool.poe.tasks.lint]
help = "Run Clippy lints"
cmd = "cargo clippy --workspace -- -D warnings"

[tool.poe.tasks.lint-ui]
help = "Run frontend ESLint"
cmd = "npm run lint --prefix packages/ui"

[tool.poe.tasks.lint-all]
help = "Run all linters (Clippy + ESLint)"
sequence = ["lint", "lint-ui"]
