[project]
name = "harbor"
version = "2.0.0"
description = "Harbor specific tasks"
requires-python = ">=3.10"
dependencies = []

# ============================================================================
# BUILD & RELEASE TASKS
# ============================================================================

[tool.poe.tasks.build]
help = "Build release binaries and installer (via Tauri)"
shell = "npm run tauri:build --prefix packages/ui"

[tool.poe.tasks.build-debug]
help = "Build debug binaries"
shell = "npm run tauri:build --prefix packages/ui -- --debug"

[tool.poe.tasks.unquarantine]
help = "Remove macOS quarantine attribute from built .app bundle"
cmd = "xattr -d com.apple.quarantine crates/tauri-app/target/release/bundle/macos/Harbor.app || true"

[tool.poe.tasks.clean]
help = "Remove build artifacts"
cmd = "cargo clean"

[tool.poe.tasks.clean-startup]
help = "Remove ghost startup entries (e.g. from debug builds)"
cmd = "uv run python tools/cleanup_startup.py"

# ============================================================================
# DEVELOPMENT TASKS
# ============================================================================

[tool.poe.tasks.dev]
help = "Start development server (Hot Reload)"
shell = "npm run tauri:dev --prefix packages/ui"

[tool.poe.tasks.test]
help = "Run unit tests"
cmd = "cargo test"

[tool.poe.tasks.test-ui]
help = "Run frontend unit tests"
shell = "npm run test --prefix packages/ui -- --run"

[tool.poe.tasks.test-e2e]
help = "Run E2E tests (Playwright)"
shell = "npm run e2e --prefix packages/ui"

[tool.poe.tasks.test-e2e-ui]
help = "Run E2E tests with Playwright UI"
shell = "npm run e2e:ui --prefix packages/ui"

[tool.poe.tasks.install-e2e-tools]
help = "Install Playwright browsers"
shell = "npx --prefix packages/ui playwright install chromium"

[tool.poe.tasks.test-all]
help = "Run both backend and frontend tests"
sequence = ["test", "test-ui"]

[tool.poe.tasks.coverage]
help = "Run backend coverage report (add --blocking for CI)"
cmd = "uv run python tools/coverage.py"
args = [{ name = "blocking", help = "Exit non-zero if coverage below threshold" }]

[tool.poe.tasks.coverage-ui]
help = "Run frontend coverage and open report"
cmd = "uv run python tools/coverage_ui.py"

[tool.poe.tasks.install-coverage-tools]
help = "Install cargo-llvm-cov"
cmd = "cargo install cargo-llvm-cov"

[tool.poe.tasks.coverage-full]
help = "Run full coverage report (includes platform-specific code paths)"
cmd = "cargo llvm-cov --workspace --summary-only"

# ============================================================================
# FUZZ TESTING
# ============================================================================

[tool.poe.tasks.install-fuzz-tools]
help = "Install cargo-fuzz"
cmd = "cargo install cargo-fuzz"

[tool.poe.tasks.fuzz-config]
help = "Fuzz the YAML config parser"
cmd = "cargo fuzz run config_yaml -- -max_total_time=30"
cwd = "crates/core/fuzz"

[tool.poe.tasks.fuzz-rule]
help = "Fuzz Rule YAML/JSON deserialization"
cmd = "cargo fuzz run rule_yaml -- -max_total_time=30"
cwd = "crates/core/fuzz"

[tool.poe.tasks.fuzz-all]
help = "Run all fuzz targets (short regression mode)"
sequence = ["fuzz-config", "fuzz-rule"]

[tool.poe.tasks.fuzz-ci]
help = "CI fuzz check — short regression run for each target"
shell = """
cd crates/core/fuzz && cargo fuzz run config_yaml -- -max_total_time=10 -rss_limit_mb=256
cd ../../.. && cd crates/core/fuzz && cargo fuzz run rule_yaml -- -max_total_time=10 -rss_limit_mb=256
"""

# ============================================================================
# LEGACY / ALIAS TASKS
# ============================================================================

[tool.poe.tasks.msi]
help = "Alias for build"
sequence = ["build"]

[tool.poe.tasks.release]
help = "Alias for build"
sequence = ["build"]

# ============================================================================
# VERSION MANAGEMENT TASKS
# ============================================================================

[tool.poe.tasks.version]
help = "Show current version"
cmd = "uv run python tools/version.py show"

[tool.poe.tasks.bump-patch]
help = "Bump patch version (2.0.0 -> 2.0.1)"
cmd = "uv run python tools/version.py bump patch"

[tool.poe.tasks.bump-minor]
help = "Bump minor version (2.0.0 -> 2.1.0)"
cmd = "uv run python tools/version.py bump minor"

[tool.poe.tasks.bump-major]
help = "Bump major version (2.0.0 -> 3.0.0)"
cmd = "uv run python tools/version.py bump major"

[tool.poe.tasks.git-release]
help = "Create git tag and push for current version"
cmd = "uv run python tools/version.py git-release"

# ============================================================================
# DEPENDENCY MANAGEMENT
# ============================================================================

[tool.poe.tasks.deps-update]
help = "Update dependencies"
cmd = "cargo update"

[tool.poe.tasks.deps-outdated]
help = "Check for outdated dependencies (requires cargo-outdated)"
cmd = "cargo outdated"

[tool.poe.tasks.deps-tree]
help = "Show dependency tree"
cmd = "cargo tree"

# ============================================================================
# UTILITY TASKS
# ============================================================================

[tool.poe.tasks.install-dev-tools]
help = "Install development tools (cargo-watch, cargo-outdated, npm deps, etc.)"
shell = """
cargo install cargo-watch
cargo install cargo-outdated
npm install --prefix packages/ui
echo "Development tools and dependencies installed successfully!"
"""

[tool.poe.tasks.size]
help = "Show binary sizes"
cmd = "uv run python tools/size.py"

[tool.poe.tasks.list]
help = "List all available tasks"
cmd = "poe"

# ============================================================================
# CHANGELOG TASKS
# ============================================================================

[tool.poe.tasks.changelog]
help = "Generate CHANGELOG.md from git history"
cmd = "git cliff -o CHANGELOG.md"

[tool.poe.tasks.changelog-preview]
help = "Preview next release notes without writing to file"
cmd = "git cliff --unreleased"

[tool.poe.tasks.install-changelog-tools]
help = "Install git-cliff"
cmd = "cargo install git-cliff"

[tool.poe.tasks.lint]
help = "Run Clippy lints"
cmd = "cargo clippy --workspace -- -D warnings"

[tool.poe.tasks.lint-ui]
help = "Run frontend ESLint"
shell = "npm run lint --prefix packages/ui"

[tool.poe.tasks.lint-all]
help = "Run all linters (Clippy + ESLint)"
sequence = ["lint", "lint-ui"]
