[package]
name = "harbor-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
harbor-core = { path = "../core" }
serde_yaml = "0.9.34"
serde_json = "1.0.132"
winreg = "0.52.0"

[dev-dependencies]
tempfile = "3.10.1"
