[package]
name = "harbor-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.20", features = ["derive"] }
harbor-core = { path = "../core", features = ["orchestrator"] }
serde_yaml.workspace = true
serde_json.workspace = true
winreg = "0.55"

[dev-dependencies]
tempfile.workspace = true
