[package]
name = "harbor-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.91"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
regex = "1.11.1"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2.9.6", features = ["json"], optional = true }
sysinfo = { version = "0.33.1", features = ["serde"], optional = true }

[features]
orchestrator = ["ureq", "sysinfo"]

[dev-dependencies]
tempfile = "3.24.0"
