[package]
name = "harbor-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
regex.workspace = true
uuid.workspace = true
[dev-dependencies]
tempfile.workspace = true
