[package]
name = "harbor-tauri-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Tauri wrapper for Harbor UI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
harbor-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
winreg = "0.55"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }


[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
