[package]
name = "harbor-tauri-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Tauri wrapper for Harbor UI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
harbor-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }


[dev-dependencies]
tempfile.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
