[package]
name = "harbor-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"
windows = { version = "0.62", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[dependencies]
anyhow.workspace = true
harbor-core = { path = "../core" }
serde_yaml.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
